fix spacing for delete button

--- a/app/assets/stylesheets/components/_song_index_item.scss
+++ b/app/assets/stylesheets/components/_song_index_item.scss
@@ -46,6 +46,19 @@
     margin-left: 1px;
 }
 
+.delete-click {
+  width: 80px;
+  background: lightblue;
+  padding: 5px;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+  position: relative;
+  top: 1px;
+  left: 1px;
+}
+
 .download-button a{
   position: relative;
   top: 1px;
